--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.15",
     "@ionic/pro": "2.0.3",
-    "angularx-qrcode": "^1.3.0",
     "core-js": "^2.5.3",
+    "qrious": "^4.0.2",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
